--- a/src/style/signup.css
+++ b/src/style/signup.css
@@ -6,7 +6,7 @@
 
 .signup-header {
   font-size: 5em;
-  margin: 0;
+  margin: 0 0 1em 0;
 }
 
 .signup-email,
@@ -20,4 +20,5 @@
 
 .signup-button {
   width: 60%;
+  cursor: pointer;
 }
