--- a/src/style/signup.css
+++ b/src/style/signup.css
@@ -1,3 +1,7 @@
+.signup {
+  padding: 10% 0;
+}
+
 .signup-form {
   display: flex;
   flex-direction: column;
@@ -5,14 +9,14 @@
 }
 
 .signup-header {
-  font-size: 5em;
+  font-size: 3em;
   margin: 0 0 1em 0;
 }
 
 .signup-email,
 .signup-pw,
 .signup-button {
-  font-size: 2em;
+  font-size: 1.5em;
   margin: 1em 0;
   border-radius: 10px;
   padding: 0.5em 1em;
