--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #282c34;
-  color: white;
+  background-color: #c8c9cc;
+  color: #000000;
   font-family: Arial;
   display: flex;
   height: 100vh;
