--- a/src/style/index.css
+++ b/src/style/index.css
@@ -14,3 +14,11 @@ body {
 p {
   font-size: 1.5em;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
