--- a/src/style/login.css
+++ b/src/style/login.css
@@ -1,20 +1,20 @@
-.signup {
+.login {
   padding: 10% 0;
 }
 
-.signup-form {
+.login-form {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.signup-header {
+.login-header {
   font-size: 2.5em;
   margin: 0 0 1rem 0;
 }
 
-.signup-email,
-.signup-pw {
+.login-email,
+.login-pw {
   border: 0;
   border-bottom: 2px solid #c8c9cc;
   outline: 0;
@@ -25,7 +25,7 @@
   margin: 1.5rem 0;
 }
 
-.signup-button {
+.login-button {
   margin: 2rem 0;
   display: inline-block;
   outline: none;
@@ -49,12 +49,12 @@
   height: 48px;
 }
 
-.signup-button:hover {
+.login-button:hover {
   color: #14141f;
   background-color: #c8c9cc;
 }
 
-.signup-create,
-.signup-test {
+.login-create,
+.login-test {
   font-size: 1em;
 }
