--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,3 +1,8 @@
+.home-container {
+  width: 100%;
+  padding: 30% 0 10% 0;
+}
+
 .home-header {
   font-size: 2.5em;
   margin: 0 0 1rem 0;
@@ -17,7 +22,7 @@
   color: #c8c9cc;
   padding: 7px 0;
   background: transparent;
-  margin: 1.5rem 0;
+  margin: 2rem 0;
   width: 50%;
 }
 
@@ -64,14 +69,18 @@
   color: #4742ff;
 }
 
+.home-total {
+  margin: 2rem 0;
+}
+
 table {
-  width: 50%;
-  table-layout: fixed;
+  width: 100%;
+  table-layout: auto;
   margin-bottom: 1rem;
 }
 
 th {
-  padding: 1rem 0.5rem;
+  padding: 1rem 2rem;
   text-align: center;
   font-weight: bold;
   font-size: 1em;
@@ -91,7 +100,6 @@ td {
 
 .td-button {
   border: none;
-  width: 30%;
   font-size: 0.7em;
 }
 
