--- a/src/style/login.css
+++ b/src/style/login.css
@@ -1,5 +1,8 @@
 .login {
-  padding: 10% 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .login-form {
