--- a/src/style/signup.css
+++ b/src/style/signup.css
@@ -1,5 +1,8 @@
 .signup {
-  padding: 10% 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .signup-form {
