--- a/src/style/home.css
+++ b/src/style/home.css
@@ -8,6 +8,17 @@
   margin: 0 0 1rem 0;
 }
 
+@media only screen and (max-width: 767px) {
+  .home-container {
+    width: 100%;
+    padding: 20% 5% 20% 10%;
+  }
+  .home-header {
+    font-size: 2em;
+    margin: 0 0 1rem 0;
+  }
+}
+
 .home-amount-container {
   display: flex;
   flex-direction: column;
