--- a/src/style/index.css
+++ b/src/style/index.css
@@ -11,6 +11,21 @@ body {
   padding: 0;
 }
 
+@media only screen and (max-width: 767px) {
+  body {
+    background-color: #14141f;
+    color: #c8c9cc;
+    font-family: Arial;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin: 0;
+    padding: 10%;
+  }
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
