--- a/src/style/home.css
+++ b/src/style/home.css
@@ -11,7 +11,7 @@
 @media only screen and (max-width: 767px) {
   .home-container {
     width: 100%;
-    padding: 20% 5% 20% 10%;
+    padding: 20% 0%;
   }
   .home-header {
     font-size: 2em;
@@ -107,6 +107,15 @@ td {
   color: #fff;
   border-bottom: solid 1px rgba(255, 255, 255, 0.1);
   padding: 0.5rem 0;
+}
+
+@media only screen and (max-width: 767px) {
+  table {
+    width: 100%;
+    table-layout: auto;
+    margin-bottom: 1rem;
+    font-size: 0.5em;
+  }
 }
 
 .td-button {
