--- a/src/style/home.css
+++ b/src/style/home.css
@@ -14,7 +14,7 @@
     padding: 20% 0%;
   }
   .home-header {
-    font-size: 2em;
+    font-size: 1.5em;
     margin: 0 0 1rem 0;
   }
 }
@@ -115,6 +115,15 @@ td {
     table-layout: auto;
     margin-bottom: 1rem;
     font-size: 0.5em;
+  }
+  th {
+    padding: 0.5rem 1rem;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1em;
+    color: #fff;
+    text-transform: uppercase;
+    background-color: rgb(255, 255, 255, 0.1);
   }
 }
 
